objects/GSOContract_Term__c.object
<CustomObject>
    <description>Junction object to allow many to many relationship between Contracts and Terms</description>
    <fields>
        <fullName>GSOContract__c</fullName>
        <label>GSOContract</label>
        <referenceTo>GSOContract__c</referenceTo>
        <relationshipName>GSOContract_Terms</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Term_Name__c</fullName>
        <formula>Term__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipName>GSOContract_Terms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GSO Contract Term</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>GSO Contract Term Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GSO Contract Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>